Subiendo el programa base para la practica

--- a/MisImagenes/practica1.html
+++ b/MisImagenes/practica1.html
@@ -16,7 +16,7 @@
         <a href="ct_about.html"><img src="tituloImagen.jpg" width="800" height="300" alt="imagen2"/> </a>
     </nav>
     <footer>
-        Practica01 &#8226; Katherine Barrera, Ecuador 28281 &#8226; 756-222-3333
+        Practica01 &#8226; 411 Belde Drive, Charlotte NC 28281 &#8226; 756-222-3333
     </footer>
 </body>
 </html>
