--- a/Tutorial01/ct_about.html
+++ b/Tutorial01/ct_about.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 
+    <meta charset=”utf-8” />
+    <meta name=”keywords”
+    content=”Thai, restaurant, Charlotte, food” />
+    <title>About Curbside Thai</title>
 </head>
 <body>
 
