Agregar encabezado como comentario(Sesion1)

--- a/Tutorial01/ct_about.html
+++ b/Tutorial01/ct_about.html
@@ -1,14 +1,25 @@
-<! DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html>
+<html> 
+  <head>
 
+    <!--
+     New Perspectives on HTML5 and CSS3, 7th Edition
+     Tutorial 1
+     Tutorial Case
+     General Information about Curbside Thai
+     Author: Katherine Michelle Barrera Barrera
+     Date:30/3/2020
+     Filename: ct_about.html
+    -->
+        
     <meta charset=”utf-8” />
     <meta name=”keywords”
     content=”Thai, restaurant, Charlotte, food” />
     <title>About Curbside Thai</title>
-</head>
-<body>
+  </head>
 
-</body>
+ <body>
+
+ </body>
 
 </html>
