--- a/Tutorial01/ct_about.html
+++ b/Tutorial01/ct_about.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html> 
   <head>
-
-    <!--
+     <!--
      New Perspectives on HTML5 and CSS3, 7th Edition
      Tutorial 1
      Tutorial Case
@@ -10,16 +9,43 @@
      Author: Katherine Michelle Barrera Barrera
      Date:30/3/2020
      Filename: ct_about.html
-    -->
-        
-    <meta charset=”utf-8” />
-    <meta name=”keywords”
-    content=”Thai, restaurant, Charlotte, food” />
-    <title>About Curbside Thai</title>
+     -->
+     <meta charset=”utf-8” />
+     <meta name=”keywords”
+     content=”Thai, restaurant, Charlotte, food” />
+     <title>About Curbside Thai</title>
   </head>
 
- <body>
-
- </body>
-
+   <body>
+     <header>
+           <h1> Curbside Thai </h1>
+     </header>
+     <article>
+         <h1> About Us </h1>
+         <p>
+             Curbside Thai brings the rich flavor of  Thailand to 
+             North Carolina. Master Chef Sajja Adulet, with over 35 
+             years of experience at the House of Asia, now offers 
+             that same fine dining to the streets of Charlotte 
+             with our modern mobile food truck.
+         </p>
+         <p>
+             This is not bland vendor food packaged in greasy 
+             paper boxes! Sample his acclaimed cuisine at our various 
+             mobile locations throughout downtown Charlotte from 
+             11 a.m. to 7 p.m. on Monday through Thursday, and 
+             11 a.m. to 11 p.m. on Friday and Saturday. Taste the 
+             difference! If you can't get away from your desk, 
+             Curbside Thai will deliver.
+         </p>
+         <p>
+             Contact us to cater your next party and experience 
+             what Carolina Traveler calls the finest Asian food 
+             on or off the streets of Charlotte.             
+         </p>
+     </article>
+     <footer>
+          Curbside Thai 411 Belde Drive, Charlotte NC 28201 704-555-1151
+      </footer>
+    </body>
 </html>
