--- a/Tutorial01/ct_about.html
+++ b/Tutorial01/ct_about.html
@@ -10,23 +10,22 @@
      Date:30/3/2020
      Filename: ct_about.html
      -->
-     <meta charset=”utf-8” />
-     <meta name=”keywords”
-     content=”Thai, restaurant, Charlotte, food” />
+     <meta charset="utf-8" />
+     <meta name="keywords" content="Thai, restaurant, Charlotte, food" />
      <title>About Curbside Thai</title>
-     <link href = "ct_base.css" rel = "stylesheet"/> <!--mas espacio entre lienas -->>
+     <link href = "ct_base.css" rel = "stylesheet"/> <!--mas espacio entre lienas -->
      <link href = "ct_layout2.css" rel = "stylesheet" /> <!--crea una linea al borde del documenot y da color a palabras citadas con cite, -->
-     <!--cambian estilo de letra entre titilos, -->>
+     <!--cambian estilo de letra entre titilos, -->
 
   </head>
 
    <body>
      <header>
-           <img src=”ct_logo2.png” alt=”Curbside Thai” />
+           <img src="ct_logo2.png" alt="Curbside Thai" />
      </header>
      <article>
          <h1> About Us </h1>
-         <img src=”ct_photo1.png” alt=”” />
+         <img src="ct_photo1.png" alt="imagen persona con un plato" />
          <p><strong>Curbside Thai</strong> brings the rich flavor of  Thailand to North Carolina. Master Chef Sajja Adulet, with over 35 years of experience at the House of Asia, now offers that same fine dining to the streets of Charlotte with our modern mobile food truck.</p>
 
          <p>This is not bland vendor food packaged in greasy paper boxes! Sample his acclaimed cuisine at our various mobile locations throughout downtown Charlotte from 11 a.m. to 7 p.m. on Monday through Thursday, and 11 a.m. to 11 p.m. on Friday and Saturday. Taste the difference! If you can't get away from your desk, <em>Curbside Thai will deliver</em>.</p>
