--- a/Tutorial01/ct_about.html
+++ b/Tutorial01/ct_about.html
@@ -21,7 +21,8 @@
 
    <body>
      <header>
-         <img src="ct_logo2.png" alt="Curbside Thai" />
+      <a href="ct_start.html"><img src="ct_logo2.png" alt="Curbside Thai" /></a>
+
          <nav>
             <ul>
              <li><a href="ct_about.html">About</a></li>
