--- a/Tutorial01/ct_catering_txt.html
+++ b/Tutorial01/ct_catering_txt.html
@@ -20,9 +20,20 @@
 </head>
 
 <body>
-  <header class="logo">
-     <img src="ct_logo2.png" alt="Curbside Thai" />
-  </header>
+   <header>
+      <a href="ct_start.html"><img src="ct_logo2.png" alt="Curbside Thai" /></a>
+
+         <nav>
+            <ul>
+             <li><a href="ct_about.html">About</a></li>
+             <li><a href="ct_locations_txt.html">Locations</a></li>
+             <li><a href="ct_menu_txt.html">Menu</a></li>
+             <li><a href="ct_reviews_txt.html">Reviews</a></li>
+             <li><a href="ct_catering_txt.html">Catering</a></li>
+             <li><a href="ct_contact_txt.html">Contact</a></li>
+           </ul>
+        </nav>
+     </header>
   <article>
      <h1>Catering</h1>
      <img src="ct_photo2.png" alt="imagen contiene comida">
