--- a/Tutorial01/ct_start.html
+++ b/Tutorial01/ct_start.html
@@ -16,11 +16,11 @@
    </header>
    <nav>
       <a href="ct_about.html"><img src="ct_about.png" alt="About Us" /></a>
-      <a href="ct_locations.html"><img src="ct_locations.png" alt="Locations" /></a>
-      <a href="ct_menu.html"><img src="ct_menu.png" alt="Menu" /></a>
-      <a href="ct_reviews.html"><img src="ct_reviews.png" alt="Reviews" /></a>
-      <a href="ct_catering.html"><img src="ct_catering.png" alt="Catering" /></a>
-      <a href="ct_contact.html"><img src="ct_contact.png" alt="Contact Us" /></a> 
+      <a href="ct_locations_txt.html"><img src="ct_locations.png" alt="Locations" /></a>
+      <a href="ct_menu_txt.html"><img src="ct_menu.png" alt="Menu" /></a>
+      <a href="ct_reviews_txt.html"><img src="ct_reviews.png" alt="Reviews" /></a>
+      <a href="ct_catering_txt.html"><img src="ct_catering.png" alt="Catering" /></a>
+      <a href="ct_contact_txt.html"><img src="ct_contact.png" alt="Contact Us" /></a> 
    </nav>
    <footer>
       Curbside Thai &#8226; 411 Belde Drive, Charlotte NC 28201 &#8226; 704-555-1151
